# parallelism-with-python

./: .flake8  .pre-commit-config.yaml  README.md  dev_requirements.txt  pyproject.toml  requirements.txt  summary.md  vscode.code-workspace
.github/workflows/: python_workflow.yml
src/asyncio/: why_additional_libraries.md
src/asyncio/built_on_async/the_trio/: prod_asyncio.py  prod_sync.py  prod_trio.py
src/asyncio/built_on_async/the_unsync/: nosync.py  presync.py  thesync.py
src/asyncio/generator/: generator.py
src/asyncio/loops/: loop_program.py  loop_program_uv.py
src/asyncio/producer_consumer/: async_program.py  sync_program.py
src/asyncio/web_scraping/: async_program.py  sync_scrape.py
src/cython/hello_world/: greeter.c  program.py  setup.py
src/cython/perf/: compute_cython.py  compute_it.py  compute_multiprocessing.py  compute_threaded.py
src/demos/: async_await_demo.py  helpers.py  main.py  multiprocessing_demo.py  multiprocessing_execution_pool_demo.py  thread_pool_executor_demo.py  threading_demo.py
src/demos/cython_demo/: __init__.py  compute_cython.c  compute_cython.pyx  compute_python.py  demo.py  setup.py
src/execution_pools/: program.py
src/multiprocessing/: compute_it.py  compute_multiprocessing.py  compute_threaded.py
src/threading/cpu_task/: compute_it.py
src/threading/hello_threads/: hello_threads.py
src/threading/producer_consumer/: threaded_program.py
src/threading/thread_safety/: safe_bank.py  safe_bank_fine_grained.py  unsafe_bank.py
