[tool.poetry]
name = "parallelism-with-python"
version = "0.1.0"
description = ""
authors = ["Connor McCarthy <mccarthy.connor.james@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/connor-mccarthy/parallelism-with-python"
keywords = []

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
colorama = "^0.4.4"
uvloop = "^0.15.2"
bs4 = "^0.0.1"
cchardet = "^2.1.7"
aiohttp = "^3.7.4"
requests = "^2.25.1"
unsync = "^1.3.2"
trio = "^0.18.0"
Cython = "^0.29.23"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pre-commit = "^2.10.1"
black = "^20.8b1"
mypy = "^0.800"
pytest = "^6.2.2"
pytest-sugar = "^0.9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.pytest]
minversion = "6.2"
addopts = "--cov=./src --cov-report=term-missing"